Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: task5
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-and-backend-pair
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: front-end
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: back-end-api

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-from-frontend
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-and-admin-backend-pair
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-back-end-api

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-from-admin-frontend
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
